--- a/public/index.html
+++ b/public/index.html
@@ -10,32 +10,52 @@
     />
     <title>Great Mart</title>
 
+    <!-- Preconnect for Firebase -->
+    <link
+      rel="preconnect"
+      href="https://eco-great-mart-default-rtdb.firebaseio.com"
+      crossorigin="anonymous"
+    />
+
+    <!-- DNS Prefetch for Firebase as fallback -->
+    <link
+      rel="dns-prefetch"
+      href="https://eco-great-mart-default-rtdb.firebaseio.com"
+    />
+
+    <link rel="preconnect" href="https://cdn-icons-png.flaticon.com" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
+      defer
     />
 
     <link
       href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
   </head>
 
   <body>
     <div id="root" style="background-color: #f4f4f4"></div>
-    
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
+      defer
     ></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
+      defer
     ></script>
   </body>
 </html>
