Made the index file more seo friendly

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Great Mart - Shop the latest trends and exclusive deals. Enjoy a seamless shopping experience with unbeatable offers. Limited time only!" />
+    <meta name="Piyush" content="Great Mart Team" />
     <link
       rel="icon"
       type="image/webp"
       href="https://cdn.jsdelivr.net/gh/immortalWebDev/my-cdn@fa4f40cc754803fc272bc18c296f72bf7133e974/great-mart/favicon.webp"
     />
-    <title>Great Mart</title>
+    <title>Great Mart | Shop Exclusive Deals</title>
 
     <!-- Preconnect for Firebase -->
     <link
@@ -30,14 +32,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
-      defer
     />
 
     <link
       href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
     />
   </head>
 
