Add main.jsx script to index.html for module support

--- a/index.html
+++ b/index.html
@@ -56,5 +56,8 @@
       crossorigin="anonymous"
       defer
     ></script>
+
+    <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
