Remove cdn for fontawesome used lib instead

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       crossorigin="anonymous"
     />
 
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
-    />
+    /> -->
   </head>
 
   <body>
