--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
 
   <body>
-    <div id="root" style="background-color: #f4f4f4"></div>
+    <div id="root"></div>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
